Code clean du point de vue des conversions RGB BGR et HSV
A ce stade, le code a été retravaillé. On a pour le moment un filtrage sur la luminosité sans modification morphologiques de l'image seuillée.
Les seuils sont récupérés dans des paramètres ROS.

Ajout d'un code pompé sur le WEB permettant l'affichage d'un histogramme.

--- a/traitement_image/feu_tricolore/CMakeLists.txt
+++ b/traitement_image/feu_tricolore/CMakeLists.txt
@@ -114,6 +114,7 @@ add_executable(
 	src/lecture_feu_node.cpp
 	src/cv_algo.cpp
 	src/cv_utils.cpp
+  src/display-histogram.cpp
 )
 
 add_executable(
