--- a/messages/trait_im_msg/CMakeLists.txt
+++ b/messages/trait_im_msg/CMakeLists.txt
@@ -6,8 +6,8 @@ project(trait_im_msg)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
 	roscpp
-   	rospy
-   	std_msgs
+  std_msgs
+  actionlib
 	message_generation
 )
 
@@ -48,7 +48,7 @@ find_package(catkin REQUIRED COMPONENTS
 add_message_files(
    	FILES
    	LightSpec.msg
-	LightSignal.msg
+    LightSignal.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -59,16 +59,16 @@ add_message_files(
 # )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+add_action_files(
+  FILES
+  processLightSignal.action
+)
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
 	DEPENDENCIES
   	std_msgs
+    actionlib
 )
 
 ###################################
