- Structure principale du programme terminée (receive Dispatcher & send scheduler) - remise en place du message BeaconSignal - correction dans les programmes de tests

--- a/communication/refBoxComm/CMakeLists.txt
+++ b/communication/refBoxComm/CMakeLists.txt
@@ -74,14 +74,15 @@ add_library(
     refBoxTransport 
 
     src/refBoxTransport.cpp
-    src/receiveHandler.cpp
     src/refBoxMessage.cpp
     src/sendScheduler.cpp
-    src/typeInfo.cpp
+    src/refBoxUtils.cpp
 )
 
 add_executable(
   refBoxComm 
+  
+  src/refBoxComm.cpp
   src/refBoxCommNode.cpp 
 )
 
