--- a/communication/refBoxComm/cfg/config.yaml
+++ b/communication/refBoxComm/cfg/config.yaml
@@ -16,28 +16,28 @@ llsfrb:
  
     public-peer:
       #host: !ipv4 172.26.255.255
-      host: !ipv4 192.168.0.255
-      port: !udp-port 4444
-      #send-port: !udp-port 4444
-      #recv-port: !udp-port 4445
+      host: !ipv4 127.0.0.255
+      #port: !udp-port 4444
+      send-port: !udp-port 4444
+      recv-port: !udp-port 4445
 
     cyan-peer:
       #host: !ipv4 172.26.255.255
-      host: !ipv4 192.168.0.255
-      port: !udp-port 4441
-      #send-port: !udp-port 4441
-      #recv-port: !udp-port 4446
+      host: !ipv4 127.0.0.255
+      #port: !udp-port 4441
+      send-port: !udp-port 4441
+      recv-port: !udp-port 4446
 
     magenta-peer:
       #host: !ipv4 172.26.255.255
-      host: !ipv4 192.168.0.255
-      port: !udp-port 4442
-      #send-port: !udp-port 4442
-      #recv-port: !udp-port 4447
+      host: !ipv4 127.0.0.255
+      #port: !udp-port 4442
+      send-port: !udp-port 4442
+      recv-port: !udp-port 4447
 
   game:
     team: PyroTeam
-    color: magenta
+    color: cyan
     robot_number: 1
     robot_name: R1
     
