création noeud landmarks extraction + fake publisher de scan (probleme à la compilation avec le laserCallback)

--- a/messages/deplacement_msg/CMakeLists.txt
+++ b/messages/deplacement_msg/CMakeLists.txt
@@ -9,6 +9,8 @@ find_package(catkin REQUIRED COMPONENTS
    	rospy
    	std_msgs
 	message_generation
+	geometry_msgs
+	sensor_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -47,10 +49,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
    	FILES
-	Points.msg
-	Point.msg
-	Droites.msg
-	Droite.msg
+	Machines.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -71,6 +70,7 @@ add_message_files(
 generate_messages(
 	DEPENDENCIES
   	std_msgs
+  	geometry_msgs
 )
 
 ###################################
