--- a/messages/manager_msg/package.xml
+++ b/messages/manager_msg/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package>
-  <name>executeur_taches</name>
+  <name>manager_msg</name>
   <version>0.0.0</version>
-  <description>The executeur_taches package</description>
+  <description>The manager_msg package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="sandra@todo.todo">cyril</maintainer>
+  <maintainer email="cyril@todo.todo">cyril</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/executeur_taches</url> -->
+  <!-- <url type="website">http://wiki.ros.org/manager_msg</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
