service pour executeur taches fait

--- a/manager/generateur_taches/CMakeLists.txt
+++ b/manager/generateur_taches/CMakeLists.txt
@@ -7,6 +7,8 @@ project(generateur_taches)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
+  std_msgs
+  message_generation
 )
 
 ## System dependencies are found with CMake's conventions
@@ -52,7 +54,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate services in the 'srv' folder
 # add_service_files(
 #   FILES
-#   Service1.srv
+#   Service.srv
 #   Service2.srv
 # )
 
@@ -66,7 +68,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
+#   std_msgs
 # )
 
 ###################################
@@ -81,7 +83,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES generateur_taches
-  CATKIN_DEPENDS roscpp rospy
+  CATKIN_DEPENDS roscpp rospy std_msgs
 #  DEPENDS system_lib
 )
 
@@ -125,12 +127,16 @@ set_target_properties(test_algo PROPERTIES COMPILE_FLAGS "-g3 -std=c++0x")
 # add_dependencies(generateur_taches_node generateur_taches_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(test_fonctions_travail
-   ${catkin_LIBRARIES}
- )
- target_link_libraries(test_algo
-   ${catkin_LIBRARIES}
- )
+ target_link_libraries(test_fonctions_travail ${catkin_LIBRARIES})
+ target_link_libraries(test_algo ${catkin_LIBRARIES} )
+
+add_executable(envoi_ordre src/envoi_ordre.cpp)
+target_link_libraries(envoi_ordre ${catkin_LIBRARIES})
+add_dependencies(envoi_ordre manager_msg_gencpp)
+
+add_executable(reception_ordre src/reception_ordre.cpp)
+target_link_libraries(reception_ordre ${catkin_LIBRARIES})
+add_dependencies(reception_ordre manager_msg_gencpp)
 
 #############
 ## Install ##
