--- a/messages/manager_msg/package.xml
+++ b/messages/manager_msg/package.xml
@@ -7,7 +7,7 @@
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="cyril@todo.todo">cyril</maintainer>
+  <maintainer email="cyril.smagghe@polytech-lille.net">cyril</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
