--- a/messages/deplacement_msg/CMakeLists.txt
+++ b/messages/deplacement_msg/CMakeLists.txt
@@ -49,7 +49,7 @@ find_package(catkin REQUIRED COMPONENTS
 ## Generate messages in the 'msg' folder
 add_message_files(
    	FILES
-	Machines.msg
+	Landmarks.msg
 )
 
 ## Generate services in the 'srv' folder
