Node Map created

--- a/navigation/path_finder/CMakeLists.txt
+++ b/navigation/path_finder/CMakeLists.txt
@@ -83,9 +83,9 @@ find_package(catkin REQUIRED COMPONENTS
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
+  INCLUDE_DIRS include/path_finder
 #  LIBRARIES path_finder
-#  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs tf
+  CATKIN_DEPENDS geometry_msgs nav_msgs roscpp rospy std_msgs tf
 #  DEPENDS system_lib
 )
 
@@ -97,6 +97,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories(
+	include/path_finder
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -106,16 +107,21 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-# add_executable(path_finder_node src/path_finder_node.cpp)
+add_executable(construct_map_node src/Map.cpp)
+add_executable(construct_map_test src/Test.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(path_finder_node path_finder_generate_messages_cpp)
+add_dependencies(construct_map_node path_finder_generate_messages_cpp)
+add_dependencies(construct_map_test path_finder_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(path_finder_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(construct_map_node
+ ${catkin_LIBRARIES}
+  )
+  target_link_libraries(construct_map_test
+ ${catkin_LIBRARIES}
+  )
 
 #############
 ## Install ##
