--- a/messages/deplacement_msg/CMakeLists.txt
+++ b/messages/deplacement_msg/CMakeLists.txt
@@ -4,7 +4,14 @@ project(deplacement_msg)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+	roscpp
+   	rospy
+   	std_msgs
+	message_generation
+	geometry_msgs
+	sensor_msgs
+)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -34,17 +41,17 @@ find_package(catkin REQUIRED)
 ##     find_package(catkin REQUIRED COMPONENTS ...)
 ##   * add "message_runtime" and every package in MSG_DEP_SET to
 ##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
+##   * uncomment the add_*_files sections below as neede
+
 ##     and list every .msg/.srv/.action file to be processed
 ##   * uncomment the generate_messages entry below
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
+add_message_files(
+   	FILES
+	Landmarks.msg
+)
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -56,15 +63,17 @@ find_package(catkin REQUIRED)
 ## Generate actions in the 'action' folder
 # add_action_files(
 #   FILES
+
 #   Action1.action
 #   Action2.action
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+generate_messages(
+	DEPENDENCIES
+  	std_msgs
+  	geometry_msgs
+)
 
 ###################################
 ## catkin specific configuration ##
@@ -77,9 +86,10 @@ find_package(catkin REQUIRED)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES deplacement_msg
-#  CATKIN_DEPENDS other_catkin_pkg
+#  LIBRARIES trait_im_msg
+#  CATKIN_DEPENDS std_msgs
 #  DEPENDS system_lib
+	CATKIN_DEPENDS message_runtime
 )
 
 ###########
@@ -89,21 +99,24 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 # include_directories(include)
+include_directories(
+  ${catkin_INCLUDE_DIRS}
+)
 
 ## Declare a cpp library
-# add_library(deplacement_msg
-#   src/${PROJECT_NAME}/deplacement_msg.cpp
+# add_library(trait_im_msg
+#   src/${PROJECT_NAME}/trait_im_msg.cpp
 # )
 
 ## Declare a cpp executable
-# add_executable(deplacement_msg_node src/deplacement_msg_node.cpp)
+# add_executable(trait_im_msg_node src/trait_im_msg_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(deplacement_msg_node deplacement_msg_generate_messages_cpp)
+# add_dependencies(trait_im_msg_node trait_im_msg_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(deplacement_msg_node
+# target_link_libraries(trait_im_msg_node
 #   ${catkin_LIBRARIES}
 # )
 
@@ -122,7 +135,7 @@ catkin_package(
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS deplacement_msg deplacement_msg_node
+# install(TARGETS trait_im_msg trait_im_msg_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -130,7 +143,8 @@ catkin_package(
 
 ## Mark cpp header files for installation
 # install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
+#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION
+
 #   FILES_MATCHING PATTERN "*.h"
 #   PATTERN ".svn" EXCLUDE
 # )
@@ -147,7 +161,7 @@ catkin_package(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_deplacement_msg.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_trait_im_msg.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
