--- a/manager/executeur_taches/CMakeLists.txt
+++ b/manager/executeur_taches/CMakeLists.txt
@@ -118,6 +118,12 @@ add_executable(
   src/emetteur_topic.cpp
   )
 
+add_executable(
+  test_reponse_service
+  src/gtServerSrv.cpp
+  src/service_node.cpp
+  )
+
 ##set_target_properties(test_exec PROPERTIES COMPILE_FLAGS -std=c++0x) # c++ version 11
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
@@ -130,6 +136,11 @@ target_link_libraries(
 )
 target_link_libraries(
   test_topic
+  ${catkin_LIBRARIES}
+)
+
+target_link_libraries(
+  test_reponse_service
   ${catkin_LIBRARIES}
 )
 
