--- a/messages/approche_finale_msg/CMakeLists.txt
+++ b/messages/approche_finale_msg/CMakeLists.txt
@@ -7,6 +7,7 @@ project(approche_finale_msg)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
+  actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -57,17 +58,19 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+ add_action_files(
+   DIRECTORY
+   action
+   FILES
+   finalApproaching.action
+ )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   std_msgs  # Or other packages containing msgs
+   actionlib_msgs     
+ )
 
 ###################################
 ## catkin specific configuration ##
@@ -81,7 +84,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES approche_finale_msg
-#  CATKIN_DEPENDS roscpp rospy
+  CATKIN_DEPENDS roscpp rospy actionlib_msgs
 #  DEPENDS system_lib
 )
 
