--- a/messages/approche_finale_msg/CMakeLists.txt
+++ b/messages/approche_finale_msg/CMakeLists.txt
@@ -7,7 +7,6 @@ project(approche_finale_msg)
 find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
-  actionlib_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -58,19 +57,19 @@ find_package(catkin REQUIRED COMPONENTS
 # )
 
 ## Generate actions in the 'action' folder
- add_action_files(
-   DIRECTORY
-   action
-   FILES
-   finalApproaching.action
- )
+# add_action_files(
+#   DIRECTORY
+#   action
+#   FILES
+#   finalApproaching.action
+# )
 
 ## Generate added messages and services with any dependencies listed here
- generate_messages(
-   DEPENDENCIES
-   std_msgs  # Or other packages containing msgs
-   actionlib_msgs     
- )
+# generate_messages(
+#   DEPENDENCIES
+#   std_msgs  # Or other packages containing msgs
+#   actionlib_msgs     
+# )
 
 ###################################
 ## catkin specific configuration ##
@@ -84,7 +83,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES approche_finale_msg
-  CATKIN_DEPENDS roscpp rospy actionlib_msgs
+  CATKIN_DEPENDS roscpp rospy
 #  DEPENDS system_lib
 )
 
