--- a/navigation/approche_finale/package.xml
+++ b/navigation/approche_finale/package.xml
@@ -40,11 +40,16 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
+  
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
-
+  <run_depend>actionlib_msgs</run_depend>
+  <run_depend>actionlib</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
