--- a/messages/manager_msg/CMakeLists.txt
+++ b/messages/manager_msg/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
   rospy
   std_msgs
   message_generation
+  actionlib_msgs        
 )
 
 ## System dependencies are found with CMake's conventions
@@ -67,17 +68,19 @@ FILES
 
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
+ add_action_files(
+   DIRECTORY
+   action
+   FILES
+   finalApproaching.action
+ )
 
 ## Generate added messages and services with any dependencies listed here
 
  generate_messages(
    DEPENDENCIES
    std_msgs
+   actionlib_msgs
  )
 
 
@@ -93,7 +96,7 @@ FILES
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES beginner_tutorials
-   CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
+   CATKIN_DEPENDS roscpp rospy std_msgs message_runtime actionlib_msgs
 #  DEPENDS system_lib
 )
 
