gérer les ordre du service Générateur de taches

--- a/manager/executeur_taches/CMakeLists.txt
+++ b/manager/executeur_taches/CMakeLists.txt
@@ -113,6 +113,7 @@ add_executable(
   src/DeliveryStation.cpp
   src/GtServerSrv.cpp
   src/LocaSubscriber.cpp
+  src/MyElements.cpp
 )
 add_executable(
   test_publish
