--- a/navigation/approche_finale/package.xml
+++ b/navigation/approche_finale/package.xml
@@ -45,12 +45,15 @@
   <build_depend>rospy</build_depend>
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>actionlib</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>message_runtime</build_depend>
   
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>actionlib</run_depend>
-
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>message_runtime</run_depend>
   <!-- The export tag contains other, unspecified, tags -->
   <export>
     <!-- You can specify that this package is a metapackage here: -->
