--- a/messages/manager_msg/CMakeLists.txt
+++ b/messages/manager_msg/CMakeLists.txt
@@ -10,6 +10,9 @@ find_package(catkin REQUIRED COMPONENTS
   std_msgs
   geometry_msgs
   message_generation
+  actionlib_msgs
+  actionlib
+  message_runtime
 )
 
 ## System dependencies are found with CMake's conventions
@@ -53,6 +56,7 @@ FILES
    GripperStatus.msg
    activity.msg
    Landmarks.msg
+   LightSpec.msg
  )
 
 ## Generate services in the 'srv' folder
@@ -68,18 +72,22 @@ FILES
 
 
 ## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
+ add_action_files(
+   DIRECTORY
+   action
+   FILES
+   processLightSignal.action
 #   Action2.action
-# )
+ )
 
 ## Generate added messages and services with any dependencies listed here
 
  generate_messages(
    DEPENDENCIES
    std_msgs
+   actionlib_msgs
    geometry_msgs
+   
  )
 
 
@@ -95,7 +103,7 @@ FILES
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES beginner_tutorials
-   CATKIN_DEPENDS roscpp rospy std_msgs message_runtime
+   CATKIN_DEPENDS roscpp rospy std_msgs message_runtime actionlib_msgs actionlib
 #  DEPENDS system_lib
 )
 
