nouveaux fichiers pour la phase d'exploration

--- a/messages/comm_msg/CMakeLists.txt
+++ b/messages/comm_msg/CMakeLists.txt
@@ -53,6 +53,8 @@ add_message_files(
     ExplorationSignal.msg
     GameState.msg
     LightSpec.msg
+	Machine.msg
+	Zone.msg
 )
 
 ## Generate services in the 'srv' folder
