--- a/hardware/gripper/CMakeLists.txt
+++ b/hardware/gripper/CMakeLists.txt
@@ -5,7 +5,7 @@ project(gripper)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-  gripper_msgs
+  gripper_msg
   roscpp
   rospy
   std_msgs
