Modification pour la phase d'exploration (branche timn/rcll-2015 du git refBox)

--- a/messages/comm_msg/CMakeLists.txt
+++ b/messages/comm_msg/CMakeLists.txt
@@ -51,10 +51,15 @@ add_message_files(
     ExplorationInfo.msg
     ExplorationMachine.msg
     ExplorationSignal.msg
+	ExplorationZone.msg
     GameState.msg
     LightSpec.msg
 	Machine.msg
-	Zone.msg
+	MachineInfo.msg
+	MachineReportInfo.msg
+	RingColor.msg
+	Robot.msg
+	RobotInfo.msg
 )
 
 ## Generate services in the 'srv' folder
