--- a/communication/refbox_comm/cfg/config.yaml
+++ b/communication/refbox_comm/cfg/config.yaml
@@ -13,33 +13,36 @@ include:
 llsfrb:
   comm:
     protobuf-dirs: ["@BASEDIR@/src/msgs"]
- 
+
     public-peer:
       #host: !ipv4 172.26.255.255
-      host: !ipv4 192.168.10.255
-      port: !udp-port 4444
-      #send-port: !udp-port 4444
-      #recv-port: !udp-port 4445
+      #host: !ipv4 192.168.10.255
+      host: !ipv4 127.0.0.255
+      #port: !udp-port 4444
+      send-port: !udp-port 4444
+      recv-port: !udp-port 4445
 
     cyan-peer:
       #host: !ipv4 172.26.255.255
-      host: !ipv4 192.168.10.255
-      port: !udp-port 4441
-      #send-port: !udp-port 4441
-      #recv-port: !udp-port 4446
+      #host: !ipv4 192.168.10.255
+      host: !ipv4 127.0.0.255
+      #port: !udp-port 4441
+      send-port: !udp-port 4441
+      recv-port: !udp-port 4446
 
     magenta-peer:
       #host: !ipv4 172.26.255.255
-      host: !ipv4 192.168.10.255
-      port: !udp-port 4442
-      #send-port: !udp-port 4442
-      #recv-port: !udp-port 4447
+      #host: !ipv4 192.168.10.255
+      host: !ipv4 127.0.0.255
+      #port: !udp-port 4442
+      send-port: !udp-port 4442
+      recv-port: !udp-port 4447
 
   game:
     team: PyroTeam
     color: cyan
     robot_number: 2
     robot_name: R2
-    
+
     crypto-keys:
-      PyroTeam: tk3P2mKD
+      PyroTeam: randomkey
