Navigation Manager (commit par Valentin) 	 * Quelques copier/coller d'Elise et Vianney du tuto SimpleActionClient avec Callbacks puis avec Callbacks dans classes. 	 * Ca compile, mais il y a très probablement plein d'erreurs dues au copié/collé à l'aveugle

--- a/navigation/navigation_manager/CMakeLists.txt
+++ b/navigation/navigation_manager/CMakeLists.txt
@@ -1,17 +1,18 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(deplacement_msg)
+project(navigation_manager)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-	roscpp
-   	rospy
-   	std_msgs
-	message_generation
-	geometry_msgs
-	sensor_msgs
-    actionlib
+  actionlib
+  deplacement_msg
+  geometry_msgs
+  nav_msgs
+  robotino_msgs
+  roscpp
+  rospy
+  std_msgs
 )
 
 ## System dependencies are found with CMake's conventions
@@ -48,10 +49,11 @@ find_package(catkin REQUIRED COMPONENTS
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-add_message_files(
-   	FILES
-	Landmarks.msg
-)
+# add_message_files(
+#   FILES
+#   Message1.msg
+#   Message2.msg
+# )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -61,19 +63,17 @@ add_message_files(
 # )
 
 ## Generate actions in the 'action' folder
-add_action_files(
-  FILES
-  TrackPath.action
-  MoveToPose.action
-)
+# add_action_files(
+#   FILES
+#   Action1.action
+#   Action2.action
+# )
 
 ## Generate added messages and services with any dependencies listed here
-generate_messages(
-	DEPENDENCIES
-  	std_msgs
-  	geometry_msgs
-    actionlib
-)
+# generate_messages(
+#   DEPENDENCIES
+#   geometry_msgs#   nav_msgs#   robotino_msgs#   std_msgs
+# )
 
 ###################################
 ## catkin specific configuration ##
@@ -85,11 +85,10 @@ generate_messages(
 ## CATKIN_DEPENDS: catkin_packages dependent projects also need
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
-#  INCLUDE_DIRS include
-#  LIBRARIES trait_im_msg
-#  CATKIN_DEPENDS std_msgs
-#  DEPENDS system_lib
-	CATKIN_DEPENDS message_runtime
+  INCLUDE_DIRS include  include/navigation_manager
+  LIBRARIES navigation_manager
+  CATKIN_DEPENDS actionlib deplacement_msg geometry_msgs nav_msgs robotino_msgs roscpp rospy std_msgs
+  DEPENDS system_lib
 )
 
 ###########
@@ -100,25 +99,30 @@ catkin_package(
 ## Your package locations should be listed before other locations
 # include_directories(include)
 include_directories(
+  include
+  include/navigation_manager
   ${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a cpp library
-# add_library(trait_im_msg
-#   src/${PROJECT_NAME}/trait_im_msg.cpp
+# add_library(navigation_manager
+#   src/${PROJECT_NAME}/navigation_manager.cpp
 # )
 
 ## Declare a cpp executable
-# add_executable(trait_im_msg_node src/trait_im_msg_node.cpp)
+add_executable(navigation_manager_node
+  src/navigation_manager_node.cpp
+  src/moveToPose.cpp
+)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(trait_im_msg_node trait_im_msg_generate_messages_cpp)
+add_dependencies(navigation_manager_node navigation_manager_generate_messages_cpp deplacement_msg_gencpp)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(trait_im_msg_node
-#   ${catkin_LIBRARIES}
-# )
+ target_link_libraries(navigation_manager_node
+  ${catkin_LIBRARIES}
+ )
 
 #############
 ## Install ##
@@ -135,7 +139,7 @@ include_directories(
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS trait_im_msg trait_im_msg_node
+# install(TARGETS navigation_manager navigation_manager_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -160,7 +164,7 @@ include_directories(
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_trait_im_msg.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_navigation_manager.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
