--- a/communication/refbox_comm/cfg/config.yaml
+++ b/communication/refbox_comm/cfg/config.yaml
@@ -39,10 +39,10 @@ llsfrb:
       recv-port: !udp-port 4447
 
   game:
-    team: PyroTeam
+    team: PYRO
     color: cyan
     robot_number: 2
     robot_name: R2
 
     crypto-keys:
-      PyroTeam: randomkey
+      PYRO : randomkey
