--- a/navigation/navigation_manager/package.xml
+++ b/navigation/navigation_manager/package.xml
@@ -48,6 +48,8 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>pathfinder</build_depend>
+
   <run_depend>actionlib</run_depend>
   <run_depend>deplacement_msg</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -56,7 +58,7 @@
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
-
+  <run_depend>pathfinder</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
