--- a/manager/executeur_taches/package.xml
+++ b/manager/executeur_taches/package.xml
@@ -47,6 +47,7 @@
   <build_depend>actionlib_msgs</build_depend>
   <build_depend>manager_msg</build_depend>
   <build_depend>comm_msg</build_depend>
+  <build_depend>deplacement_msg</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
@@ -54,7 +55,7 @@
   <run_depend>actionlib_msgs</run_depend>
   <run_depend>manager_msg</run_depend>
   <run_depend>comm_msg</run_depend>
-
+  <run_depend>deplacement_msg</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
